--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
   
       <a class="navbar-brand" href="#">
-       <img src="PichuIcon.png" height="100" alt="mdb logo">
+       <img src="PichuIcon.png" height="100" alt="ItsMatt0x logo">
       </a>
   
       <!-- Collapse button -->
