--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
   
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="https://www.twitch.tv/itsmatt0x">
        <img src="PichuIcon.png" height="100" alt="ItsMatt0x logo">
       </a>
   
