--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <video autoplay muted loop id="myVideo">
-    <source src="Yeet.mp4.mp4" type="video/mp4">
+    <source src="Yeet.mp4" type="video/mp4">
   </video>
 
 
