--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   </div>
 <!-- Navbar-->
 <header class="header">
-  <nav class="navbar navbar-expand-lg fixed-top py-3">
-      <div class="container"><a href="https://www.twitch.tv/itsmatt0x" class="navbar-brand text-uppercase font-weight-bold">ItsMatt0x</a>
+  <nav id="yeet" class="navbar navbar-expand-lg fixed-top py-3">
+      <div class="container"><a href="https://www.twitch.tv/itsmatt0x" class="navbar-brand font-weight-bold" style="font-size:50px;">ItsMatt0x</a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
           
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
@@ -86,8 +86,11 @@
           </div>
       </div>
       <style>
+
         .navbar {
     transition: all 0.4s;
+    background-color: rgba(0,0,0,.5);
+
 }
 
 .navbar .nav-link {
@@ -96,7 +99,7 @@
 
 .navbar .nav-link:hover,
 .navbar .nav-link:focus {
-    color: #fff;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
@@ -108,7 +111,7 @@
 /* Change navbar styling on scroll */
 .navbar.active {
     background: #fff;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
 }
 
 .navbar.active .nav-link {
@@ -117,7 +120,7 @@
 
 .navbar.active .nav-link:hover,
 .navbar.active .nav-link:focus {
-    color: #555;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
