--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   
   <div class="content">
-    <h1>ItsMatt0x</h1>
+    <h1>Who Am I?</h1>
     <p>A random guy who plays league and for some reason made a youtube channel. The video playing is a compilation from my channel ;)</p>
     <button id="myBtn" onclick="myFunction()">Pause</button>
   <style>
@@ -78,9 +78,8 @@
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
-                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Gallery</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Twitch</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Games</a></li>
                   <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
               </ul>
           </div>
