--- a/twitch.html
+++ b/twitch.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="navbar.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
@@ -14,68 +15,13 @@
           
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
-                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Twitch</a></li>
+                  <li class="nav-item active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
+                  <li class="nav-item"><a href="twitch.html" class="nav-link text-uppercase font-weight-bold">Twitch<span class="sr-only">(current)</span>/a></li>
                   <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Games</a></li>
                   <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
               </ul>
           </div>
       </div>
-      <style>
-
-        .navbar {
-    transition: all 0.4s;
-    background-color: rgba(0,0,0);
-
-}
-
-.navbar .nav-link {
-    color: #fff;
-}
-
-.navbar .nav-link:hover,
-.navbar .nav-link:focus {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-}
-
-.navbar .navbar-brand {
-    color: #fff;
-}
-
-
-/* Change navbar styling on scroll */
-.navbar.active {
-    background: #fff;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
-}
-
-.navbar.active .nav-link {
-    color: #555;
-}
-
-.navbar.active .nav-link:hover,
-.navbar.active .nav-link:focus {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-}
-
-.navbar.active .navbar-brand {
-    color: rgb(0, 0, 0);
-}
-
-
-/* Change navbar styling on small viewports */
-@media (max-width: 991.98px) {
-    .navbar {
-        background: #fff;
-    }
-
-    .navbar .navbar-brand, .navbar .nav-link {
-        color: #555;
-    }
-}
-</style>
 
   </nav>
 </header>
