--- a/twitch.html
+++ b/twitch.html
@@ -16,7 +16,7 @@
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home</a></li>
-                  <li class="nav-item"><a href="twitch.html" class="nav-link text-uppercase font-weight-bold">Twitch<span class="sr-only">(current)</span>/a></li>
+                  <li class="nav-item"><a href="twitch.html" class="nav-link text-uppercase font-weight-bold">Twitch<span class="sr-only">(current)</span></a></li>
                   <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Games</a></li>
                   <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
               </ul>
