--- a/twitch.html
+++ b/twitch.html
@@ -7,6 +7,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
+
 <!-- Navbar-->
 <header class="header">
   <nav id="yeet" class="navbar navbar-expand-lg fixed-top py-3">
@@ -25,7 +26,34 @@
 
   </nav>
 </header>
-    
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+    <script type="text/javascript">
+      new Twitch.Embed("twitch-embed", {
+        width:1200,
+        height: 600,
+        channel: "itsmatt0x",
+
+      });
+    </script>
   <script src="js/scripts.js"></script>
+  <style>
+      #twitch-embed{
+          margin-top:150px;
+          margin-left:300px;
+          align-content: center;
+      }
+      body {
+  background-image: url('20617.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+  </style>
 </body>
 </html>
