--- a/twitch.html
+++ b/twitch.html
@@ -11,7 +11,7 @@
 <!-- Navbar-->
 <header class="header">
   <nav id="yeet" class="navbar navbar-expand-lg fixed-top py-3">
-      <div class="container"><a href="https://www.twitch.tv/itsmatt0x" class="navbar-brand font-weight-bold" style="font-size:50px;">ItsMatt0x</a>
+      <div class="container"><a href="https://www.twitch.tv/itsmatt0x" class="navbar-brand font-weight-bold" style="font-size:50px;">twitch.tv/itsmatt0x</a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
           
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
