--- a/games.html
+++ b/games.html
@@ -27,5 +27,19 @@
   </nav>
 </header>
    
+<div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        One of three columns
+      </div>
+      <div class="col-sm-4">
+        One of three columns
+      </div>
+      <div class="col-sm-4">
+        One of three columns
+      </div>
+    </div>
+  </div
+
 </body>
 </html>
