--- a/games.html
+++ b/games.html
@@ -27,7 +27,32 @@
 
   </nav>
 </header>
-   
+   <h1 class="titleA">Games I Play</h1>
+<div class="container" id="Games">
+    <div class="row">
+      <div class="col-sm">
+             <img src="lol.png">     
+    </div>
+      <div class="col-sm">
+        <img src="tft.png">
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
 
+<style>
+     #Games{
+         margin-top:200px;
+     }
+     .titleA{
+         margin-top: 200px;
+         margin-left: 730px;
+         text-shadow: 2px 2px 5px black;
+         font-size:60px;
+
+     }
+  </style>
 </body>
 </html>
