--- a/games.html
+++ b/games.html
@@ -30,16 +30,15 @@
    <h1 class="titleA">Games I Play</h1>
 <div class="container" id="Games">
     <div class="row">
-      <div class="col-sm">
-             <img src="lol.png">     
+      <div class="col-sm-6">
+             <img src="lol.png">   
+             <h2 style="padding-top: 50px;">League of Legends</h2>  
     </div>
-      <div class="col-sm">
+      <div class="col-sm-6" style="padding-left: 150px;">
         <img src="tft.png">
+        <h2 style="padding-top: 50px;">Teamfight Tactics</h2>  
+
       </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
-    </div>
   </div>
 
 <style>
