--- a/games.html
+++ b/games.html
@@ -32,9 +32,9 @@
     <div class="row">
       <div class="col-sm-6">
              <img src="lol.png">   
-             <h2 style="padding-top: 50px;">League of Legends</h2>  
+             <h2 style="padding-top: 50px; color:white;">League of Legends</h2>  
     </div>
-      <div class="col-sm-6" style="padding-left: 150px;">
+      <div class="col-sm-6" style="padding-left: 150px; color:white;">
         <img src="tft.png">
         <h2 style="padding-top: 50px;">Teamfight Tactics</h2>  
 
@@ -50,8 +50,15 @@
          margin-left: 730px;
          text-shadow: 2px 2px 5px black;
          font-size:60px;
+         color:white;
 
      }
+     body {
+  background-image: url('gamesbackground.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
   </style>
 </body>
 </html>
