--- a/contact.html
+++ b/contact.html
@@ -27,43 +27,39 @@
 
   </nav>
 </header>
-   <h1 class="titleA text-center">Games I Play</h1>
-<div class="container" id="Games">
-    <div class="row">
-      <div class="col-sm-6 text-center" style="color:white;">
-             <img src="lol.png">   
-             <h2 style="padding-top: 50px;">League of Legends</h2>  
-             <p>In a year I will be at the top, I play it alot and will continue until I become the best. Teams better prepare their contracts
-               because in a few years I'm gonna be pretty good.
-             </p>
+<h2 id="yes">Contact Info</h2>
+<div class="container" style="padding-top:60px; color:white ">
+    <div class ="row">
+        <div class="col-sm-6 text-center">
+            <img src="Gmail_Icon.png" style="width:300px;">
+            <h2 class="subyes">Email</h2>
+            <h5 style="text-decoration: underline;">player1gamin@gmail.com</h5>
+        </div>
+        <div class="col-sm-6 text-center">
+            <img src="discord.png" style="width:300px;">
+            <h2 class="subyes">Discord</h2>
+            <h5 style="text-decoration: underline;">ItsMatt0x#4828</h5>
+        </div>
     </div>
-      <div class="col-sm-6 text-center" style="padding-left: 150px; color:white;">
-        <img src="tft.png">
-        <h2 style="padding-top: 50px; text-align: center;">Teamfight Tactics</h2>  
-        <p style="text-align: center;">The side game that is equally as frustrating as the real game. Whenever you think you had a good strong comp that IS actually good, but other
-          people have stupid comps that work for some reason... Makes it very hard to rank up.
-        </p>
-
-      </div>
-  </div>
-
+</div>
 <style>
-     #Games{
-         margin-top:200px;
-     }
-     .titleA{
-       margin-top: 200px;
-         text-shadow: 2px 2px 5px black;
-         font-size:60px;
-         color:white;
-
-     }
-     body {
-  background-image: url('gamesbackground.jpg');
+    body {
+  background-image: url("kk.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  text-shadow:2px 2px 5px black;
+
 }
-  </style>
+#yes{
+    text-align: center;
+    margin-top:20.63983488132095vh;
+    color:white;
+    font-size: 80px;
+    }
+.subyes{
+    font-size: 50px;
+}
+</style>
 </body>
 </html>
