--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <li class="nav-item active"><a href="index.html" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
                   <li class="nav-item"><a href="twitch.html" class="nav-link text-uppercase font-weight-bold">Twitch</a></li>
                   <li class="nav-item"><a href="games.html" class="nav-link text-uppercase font-weight-bold">Games</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+                  <li class="nav-item"><a href="contact.html" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
               </ul>
           </div>
       </div>
