--- a/games.html
+++ b/games.html
@@ -30,20 +30,25 @@
    <h1 class="titleA text-center">Games I Play</h1>
 <div class="container" id="Games">
     <div class="row">
-      <div class="col-sm-6 text-center" style="color:white;">
+      <div class="col-sm-4 text-center" style="color:white;">
              <img src="lol.png">   
              <h2 style="padding-top: 50px;">League of Legends</h2>  
              <p>In a year I will be at the top, I play it alot and will continue until I become the best. Teams better prepare their contracts
                because in a few years I'm gonna be pretty good.
              </p>
     </div>
-      <div class="col-sm-6 text-center" style="padding-left: 150px; color:white;">
+      <div class="col-sm-4 text-center" style= "color:white;">
         <img src="tft.png">
         <h2 style="padding-top: 50px; text-align: center;">Teamfight Tactics</h2>  
         <p style="text-align: center;">The side game that is equally as frustrating as the real game. Whenever you think you had a good strong comp that IS actually good, but other
           people have stupid comps that work for some reason... Makes it very hard to rank up.
         </p>
 
+      </div>
+      <div class=" col-sm-4 text-center" style="color:white;">
+        <img src="Valorant_logo.png" style="width:500px; height: 256px;">
+        <h2 style="padding-top: 50px; padding-left: 100px; text-align: center;">Valorant</h2>
+        <p style="text-align: center; padding-left: 100px;">Bye bye CS:GO hello new second favorite game that takes way to much xp to get rewards nut is still awesome and I got a Key HAHAHAHAHAHAHA.</p>
       </div>
   </div>
 
