--- a/twitch.html
+++ b/twitch.html
@@ -21,6 +21,7 @@
                   <li class="nav-item"><a href="twitch.html" class="nav-link text-uppercase font-weight-bold">Twitch<span class="sr-only">(current)</span></a></li>
                   <li class="nav-item"><a href="games.html" class="nav-link text-uppercase font-weight-bold">Games</a></li>
                   <li class="nav-item"><a href="contact.html" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+                  <li class="nav-item"><a href="leaderboard.html" class="nav-link text-uppercase font-weight-bold">Project: Pokémon Speedrun leaderboard</a></li>
               </ul>
           </div>
       </div>
