bg pic for leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -27,5 +27,16 @@
       
         </nav>
 
+
+<style>
+    body {
+        background-image: url("empoleon.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+    }
+</style>
+
+
 </body>
 </html>
