--- a/leaderboard.html
+++ b/leaderboard.html
@@ -26,7 +26,18 @@
             </div>
       
         </nav>
+<table>
+    <tr>
+        <th>Rank</th>
+        <th>Player</th>
+        <th>Time</th>
+        <th>Date</th>
+    </tr>
 
+
+
+
+</table>
 
 <style>
     body {
