--- a/leaderboard.html
+++ b/leaderboard.html
@@ -33,6 +33,12 @@
         <th>Time</th>
         <th>Date</th>
     </tr>
+    <tr>
+        <th>1st</th>
+        <th>ItsMatt0x</th>
+        <th>2:25:32.72</th>
+        <th>2020-07-02</th>
+    </tr>
 
 
 
@@ -46,6 +52,21 @@
   background-attachment: fixed;
   background-size: cover;
     }
+
+    table {
+        font-family:Segoe UI;
+        border-collapse: collapse;
+        width:80%;
+    }
+    td, th{
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+
 </style>
 
 
