--- a/leaderboard.html
+++ b/leaderboard.html
@@ -54,6 +54,8 @@
     }
 
     table {
+        margin-top:20%;
+        margin-left:40%;
         font-family:Segoe UI;
         border-collapse: collapse;
         width:80%;
