--- a/leaderboard.html
+++ b/leaderboard.html
@@ -54,8 +54,8 @@
     }
 
     table {
-        margin-top:20%;
-        margin-left:40%;
+        margin-top:10%;
+        margin-left:10%;
         font-family:Segoe UI;
         border-collapse: collapse;
         width:80%;
@@ -64,6 +64,9 @@
         border: 1px solid #dddddd;
         text-align: left;
         padding: 8px;
+    }
+    tr{
+        background-color:white;
     }
     tr:nth-child(even) {
         background-color: #dddddd;
